; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cmd.c_Cmd_Vstr_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cmd.c_Cmd_Vstr_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [50 x i8] c"vstr <variablename> : execute a variable command\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Cmd_Vstr_f() #0 {
  %1 = alloca i8*, align 8
  %2 = call i32 (...) @Cmd_Argc()
  %3 = icmp ne i32 %2, 2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @Com_Printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  br label %12

6:                                                ; preds = %0
  %7 = call i32 @Cmd_Argv(i32 1)
  %8 = call i8* @Cvar_VariableString(i32 %7)
  store i8* %8, i8** %1, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = call i32 @va(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %9)
  %11 = call i32 @Cbuf_InsertText(i32 %10)
  br label %12

12:                                               ; preds = %6, %4
  ret void
}

declare dso_local i32 @Cmd_Argc(...) #1

declare dso_local i32 @Com_Printf(i8*) #1

declare dso_local i8* @Cvar_VariableString(i32) #1

declare dso_local i32 @Cmd_Argv(i32) #1

declare dso_local i32 @Cbuf_InsertText(i32) #1

declare dso_local i32 @va(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
